updated more layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,7 @@ font-family: Arial, Helvetica, sans-serif;
   position: absolute; 
   bottom: 10px; 
   left: 10px; 
+  white-space: nowrap;
   background-color: var(--dark); 
   color: var(--main); 
   padding: 8px; 
